-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 Beta, 5.5.0
-
a9276971aa8018837b23a847b5dee3b63b39232e
If you have a string property in the QtQuick component and you try to set a decimal value to it in JavaScript, it is set validly to an approximate of the value. For example if you set value 3.4 to a string as
property string myString ... onSomeSignalHandler: myString = 3.4
the value of myString is 3.3999999999999999. And for example with 1.1 the value is 1.1000000000000001.
The problem is not reproducible in Qt 5.4.2.
An example attached to reproduce the problem.
- is duplicated by
-
QTBUG-47264 Change in double to string conversion
-
- Closed
-
- is replaced by
-
QTBUG-42574 QVariant doesn't properly convert floats and doubles stored within it to QString.
-
- Closed
-
- relates to
-
QTBUG-47192 [REG 5.4.2->5.5,0] Conversion from QVariant to QString is broken for double and float values
-
- Closed
-
| For Gerrit Dashboard: QTBUG-47070 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 126139,4 | Use V4 double-to-string conversion instead of QVariant's | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |