Use V4 double-to-string conversion instead of QVariant's

V4's version makes an effort to find the shortest possible
representation, which QVariant doesn't do.

Task-number: QTBUG-47070
Change-Id: I49ce130020496592325074e0db29a6984ee7649a
Reviewed-by: Simon Hausmann <simon.hausmann@theqtcompany.com>