src/qml/qml/qqmlproperty.cpp
@@ -50,6 +50,7 @@
 #include "qqmlvaluetypeproxybinding_p.h"
 #include <private/qjsvalue_p.h>
 #include <private/qv4functionobject_p.h>
+#include <private/qv4runtime_p.h>
 
 #include <QStringList>
 #include <private/qmetaobject_p.h>
@@ -1350,7 +1351,12 @@ bool QQmlPropertyPrivate::write(QObject *object,
 
         if (!ok) {
             v = value;
-            if (v.convert(propertyType)) {
+            if (variantType == QVariant::Double && propertyType == QVariant::String) {
+                QString number;
+                QV4::RuntimeHelpers::numberToString(&number, v.toDouble());
+                v = number;
+                ok = true;
+            } else if (v.convert(propertyType)) {
                 ok = true;
             } else if (v.isValid() && value.isNull()) {
                 // For historical reasons converting a null QVariant to another type will do the trick
